# network-programming

Lab2/: resources.qrc
Lab2/include/client/: Client.h
Lab2/include/common/: Logger.h
Lab2/include/message/: BasicMessage.h  Messages.h
Lab2/include/protocol/: Protocol.h
Lab2/include/server/: Server.h
Lab2/qmls/: main.qml
Lab2/qmls/components/: Avatar.qml  AvatarBar.qml  ChatList.qml  ChatListItem.qml  CreateGroupWindow.qml  InputArea.qml  MessageBubble.qml  MessageList.qml  SelectableUserList.qml
Lab2/src/app/: CMakeLists.txt  app.cc
Lab2/src/client/: CMakeLists.txt  Client.cc
Lab2/src/common/: Logger.cc  UdpConnector.cc
Lab2/src/message/: BasicMessage.cc
Lab2/src/protocol/: CMakeLists.txt  Protocol.cc
Lab2/src/server/: Server.cc
Lab3/: .gitsubmodules  CMakeLists.txt
Lab3/include/client/: Client.h
Lab3/include/common/: Logger.h  UdpConnector.h
Lab3/include/message/: BasicMessage.h
Lab3/include/protocol/: Protocol.h
Lab3/include/server/: Server.h
Lab3/qmls/: main.qml
Lab3/qmls/components/: Avatar.qml  AvatarBar.qml  ChatList.qml  ChatListItem.qml  CreateGroupWindow.qml  FileTrans.qml  InputArea.qml  MessageBubble.qml  MessageList.qml  SelectableUserList.qml
Lab3/src/app/: CMakeLists.txt  app.cc
Lab3/src/client/: CMakeLists.txt  client.cc
Lab3/src/common/: CMakeLists.txt  UdpConnector.cc
Lab3/src/message/: BasicMessage.cc  CMakeLists.txt
Lab3/src/protocol/: CMakeLists.txt  Protocol.cc
Lab3/src/server/: CMakeLists.txt  Server.cc
